# ML-MD-bot

./: bot.py  firebase.json  pyproject.toml  requirements.txt  requirments.txt
cogs/: dmgcalc.py  help.py  henostools.py  other.py  submissions.py
tools/: database.py  help.py  mlmd bot.py  mlmd_bot.py  react_roles.py
